--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <title>Type Ninja</title>
-    <link href="/src/style.css" media="screen" rel="stylesheet" type="text/css" />
+    <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <link href="src/style.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="lib/right.js"></script>
     <script type="text/javascript" src="test/init.js"></script>
     <script type="text/javascript">
