The keyboard block reworked

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <link href="src/style.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="lib/right.js"></script>
-    <script type="text/javascript" src="test/init.js"></script>
+    <script type="text/javascript" src="src/init.js"></script>
     <script type="text/javascript">
       // <!--
       document.onReady(function() {
