basic layout organization

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
-    <title>Type Ninja</title>
+    <title>Typing Ninja</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+    <link href="src/layout.css" media="screen" rel="stylesheet" type="text/css" />
     <link href="src/style.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="lib/right.js"></script>
     <script type="text/javascript" src="src/init.js"></script>
@@ -18,7 +19,7 @@
   <body>
     <div id="body">
       <div id="head">
-        <a href="" id="logo">Type Ninja</a>
+        <a href="" id="logo">Typing Ninja</a>
       </div>
       <div id="main">
         <div id="game-container"></div>
