--- a/about.html
+++ b/about.html
@@ -5,31 +5,40 @@
     <title>Typing Ninja</title>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <link href="src/layout.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href="src/style.css" media="screen" rel="stylesheet" type="text/css" />
-    <script type="text/javascript" src="lib/right.js"></script>
-    <script type="text/javascript" src="src/init.js"></script>
-    <script type="text/javascript">
-      // <!--
-      document.onReady(function() {
-        var game = new TypeNinja('game-container');
-      });
-      // -->
-    </script>
   </head>
   <body>
     <div id="body">
       <div id="head">
         <a href="index.html" id="logo">Typing Ninja</a>
         <ul id="main-menu">
-          <li class="current"><a href="index.html">Main</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="index.html">Main</a></li>
+          <li class="current"><a href="about.html">About</a></li>
           <li><script type="text/javascript">
             var i,y,x="3c6120687265663d226d61696c746f3a696e666f4072696768746a732e6f7267223e436f6e746163743c2f613e";y='';for(i=0;i<x.length;i+=2){y+=unescape('%'+x.substr(i,2));}document.write(y);
           </script></li>
         </ul>
       </div>
       <div id="main">
-        <div id="game-container"></div>
+        <h1>About The Project</h1>
+        <p>
+          Typing Ninja is the falling letters game implemented in JavaScript
+        </p>
+        <p>
+          This version uses the <a href="http://rightjs.org">RightJS</a> framework
+        </p>
+        <p>&nbsp;</p>
+
+        <h2>Source Code</h2>
+        <p>
+          All the source code of the project is available under the terms of the MIT license at the GitHub
+          service
+        </p>
+        <p>
+          <a href="http://github.com/MadRabbit/typing-ninja" target="_blank">http://github.com/MadRabbit/typing-ninja</a>
+        </p>
+        <p>
+          <tt>git clone git://github.com/MadRabbit/typin-ninja.git</tt>
+        </p>
       </div>
       <div id="foot">Copyright &copy; Nikolay V. Nemshilov aka St.</div>
     </div>
